--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "hbs": "^4.0.1",
+    "jquery-datetimepicker": "^2.5.20",
     "moment": "^2.21.0",
     "mongodb": "^3.0.5",
     "socket.io": "^1.7.4"
