--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'  "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "jquery-datetimepicker": "^2.5.20",
     "moment": "^2.21.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.15",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^1.7.4"
   },
   "devDependencies": {
