--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^5.1.2",
     "hbs": "^4.0.1",
     "jquery-datetimepicker": "^2.5.20",
+    "json-stringify": "^1.0.0",
     "moment": "^2.21.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.15",
