--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
-    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.1.2",
+    "forecast.io-bluebird": "0.0.1",
     "hbs": "^4.0.1",
     "jquery-datetimepicker": "^2.5.20",
     "json-stringify": "^1.0.0",
