--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index2.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'  "
   },
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^5.0.3",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.2"
   }
 }
