--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'  "
+    "test-watch": "nodemon --exec 'npm test'  ",
+    "dev" : "env-cmd ./config/dev.env nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +32,7 @@
     "socket.io": "^1.7.4"
   },
   "devDependencies": {
+    "env-cmd": "^8.0.2",
     "expect": "^1.20.2",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.2"
